did some touching up of things and fixed the issue where you have to edit the serverconfig file in order to get the metalmind curios slot